--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="HMIS - Health Management Information System" />
+  <meta name="description" content="MOM - Mini Online Market" />
   <link rel="apple-touch-icon" href="logo192.png" />
   <!-- manifest.json provides metadata used when your web app is installed on a user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/ -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -21,7 +21,7 @@
     -->
   <!-- Google Fonts: Roboto and Raleway -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900|Roboto:100,300,400,500,700,900">
-  <title>HMIS - स्वास्थ्य व्यवस्थापन सूचना प्रणाली</title>
+  <title>MOM - Mini Online Market</title>
 </head>
 
 <body>
